--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,19 @@
           <artifactId>curator-recipes</artifactId>
           <version>2.7.0</version>
       </dependency>
+
+      <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-all</artifactId>
+          <version>5.5.0</version>
+      </dependency>
+
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.6.2</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>picturemaster</finalName>
