--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
           <artifactId>slf4j-log4j12</artifactId>
           <version>1.6.2</version>
       </dependency>
+
+      <dependency>
+          <groupId>com.bbossgroups</groupId>
+          <artifactId>bboss-hession</artifactId>
+          <version>4.10.9</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>picturemaster</finalName>
